# ds-modems-c

./: CMakeLists.txt  LICENSE  README.md
inc/: ds_modems.h
src/: CMakeLists.txt  lib.c  lib.h
tests/: CMakeLists.txt  lib_tests.cpp
